kubernetes/ide-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ide-svc
spec:
  selector:
    app: ide
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
