kubernetes/ide-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ide-ingress
  annotations:
    ngnix.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ide-svc
          servicePort: 80
